--- a/css/plan-renault.css
+++ b/css/plan-renault.css
@@ -10,6 +10,37 @@ p{
 	font-size: 1.31rem;
 }
 
+.navbar{
+	font-family: 'Open Sans', sans-serif;
+	font-size: 1.25rem;
+	line-height: 1.6rem;
+	border-top: 5px solid #d2d62a;
+	padding: 0px;
+	color: #777;
+}
+
+.dropdown-item{
+	font-family: 'Open Sans', sans-serif;
+	font-size: 1.25rem;
+	color: #777;
+}
+
+.collapse.navbar-collapse .navbar-nav.ml-auto > li > a:hover {
+    color: #d2d62a;
+}
+
+.collapse.navbar-collapse .navbar-nav.ml-auto .nav-item.dropdown .dropdown-menu.dropdown-menu-right > a:hover{
+	color: #d2d62a;
+}
+
+.detalles-modelos{
+	font-family: 'Open Sans', sans-serif;
+	font-size: 1.25rem;
+	line-height: 1.6rem;
+	font-weight: bold;
+	color: #5a5a5a;
+}
+
 .descripcion-desktop{
 	font-family: 'Open Sans', sans-serif;
 	font-size: 1.25rem;
@@ -32,20 +63,20 @@ p{
 	border-bottom-width: 1px;
 }
 
-.collapse.navbar-collapse .navbar-nav.ml-auto > li > a:hover {
-    color: #d2d62a;
+.thumb{
+	box-shadow: 0 0 10px rgba(0,0,0,.2);
+	border: 2px solid #cfcfcf;
 }
 
-.navbar{
-	font-family: 'Open Sans', sans-serif;
-  	font-size: 1.25rem;
-  	line-height: 1.6rem;
-  	border-top: 5px solid #d2d62a;
-  	padding: 0px;
+.thumb{
+	-webkit-transition: all 3s ease;
+  -moz-transition: all 3s ease;
+  -o-transition: all 3s ease;
+  transition: all 3s ease;
 }
 
-.collapse.navbar-collapse .navbar-nav.ml-auto .nav-item.dropdown .dropdown-menu.dropdown-menu-right > a:hover{
-	color: #d2d62a;
+.thumb:hover{
+	width: 400px;
 }
 
 .carousel .carousel-inner {
