--- a/css/plan-renault.css
+++ b/css/plan-renault.css
@@ -2,12 +2,30 @@ body{
 	margin-top: 115px;
 }
 
-h3{
+h1{
 	font-size: 2.37rem;
+	font-family: 'Dosis', sans-serif;
+	color: #5a5a5a;
+}
+
+
+h2{
+	font-size: 2rem;
+	font-family: 'Dosis', sans-serif;
+	color: #5a5a5a;
+}
+
+h3{
+	font-size: 1.5rem;
+	font-family: 'Dosis', sans-serif;
+	color: #5a5a5a;
 }
 
 p{
-	font-size: 1.31rem;
+	font-size: 1.25rem;
+	line-height: 1.8rem;
+	font-family: 'Open Sans', sans-serif;
+	color: #5a5a5a;
 }
 
 .navbar{
@@ -50,7 +68,7 @@ p{
 }
 
 .descripcion-mobile{
-	font-family: 'Muli', sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	font-size: 1rem;
 	line-height: 1.6rem;
 	color: rgba(0,0,0,.7);
@@ -92,6 +110,32 @@ p{
   background-repeat: no-repeat;
 }
 
+.carousel-caption{
+	text-shadow: 0 1px 1px rgba(0,0,0,.4);
+	background: rgba(0,0,0,.2);
+	max-width: 40%;
+	padding: 5%;
+	text-align: left;
+	line-height: 0.87rem;
+}
+
+.carousel-h3{
+	font-size: 2.37rem;
+	text-align: left;
+	color: #fff;
+	font-family: 'Dosis', sans-serif;
+	text-shadow: 0 1px 1px rgba(0,0,0,.4);
+}
+
+.carousel-p{
+	font-size: 1.3rem;
+	text-align: left;
+	color: #fff;
+	font-family: 'Dosis', sans-serif;
+	text-shadow: 0 1px 1px rgba(0,0,0,.4);
+}
+
+
 .btn.btn-warning.btn-lg{
 	background-color: #d2d62a;
 	color: #fff;
@@ -99,17 +143,6 @@ p{
 	background-image: linear-gradient(to bottom,#d2d62a,#94971d);
 	border-color: rgba(0,0,0,.1) rgba(0,0,0,.1) rgba(0,0,0,.25);
 	border-radius: 6px;
-}
-
-.carousel-caption{
-	text-shadow: 0 1px 1px rgba(0,0,0,.4);
-	background: rgba(0,0,0,.2);
-	max-width: 40%;
-	padding: 5%;
-	line-height: 0.87rem;
-	text-align: left;
-	color: #fff;
-	font-family: 'Dosis', sans-serif;
 }
 
 .logo{
