--- a/css/plan-renault.css
+++ b/css/plan-renault.css
@@ -38,6 +38,10 @@ footer{
 	color: #777;
 }
 
+#navbarResponsive{
+	margin-left: 10px;
+}
+
 .logo{
 	max-width: 250px; 
 	max-height: 100px; 
@@ -61,14 +65,14 @@ footer{
 }
 
 /*slider del index*/
-.carousel .carousel-inner {
-  height: 80vh;
-  min-height: 350px;
+#carousel-header{
+	padding-right: 0px;
+	padding-left: 0px;
 }
 
 .carousel-item{
-  max-height: 80vh;
-  min-height: 80vh;
+  max-height: 70vh;
+  min-height: 70vh;
   max-width: 100vw;
   background-size: cover;
   background-position: center center;
@@ -78,14 +82,14 @@ footer{
 .carousel-caption{
 	text-shadow: 0 1px 1px rgba(0,0,0,.4);
 	background: rgba(0,0,0,.2);
-	max-width: 40%;
-	padding: 5%;
+	max-width: 30%;
+	padding: 4%;
 	text-align: left;
 	line-height: 0.87rem;
 }
 
 .carousel-h3{
-	font-size: 2.37rem;
+	font-size: 2rem;
 	text-align: left;
 	color: #fff;
 	font-family: 'Dosis', sans-serif;
@@ -93,14 +97,15 @@ footer{
 }
 
 .carousel-p{
-	font-size: 1.3rem;
+	font-size: 1.1rem;
+	line-height: 1.2rem;
 	text-align: left;
 	color: #fff;
 	font-family: 'Dosis', sans-serif;
 	text-shadow: 0 1px 1px rgba(0,0,0,.4);
 }
 
-.btn.btn-warning.btn-lg{
+.btn.btn-warning{
 	background-color: #d2d62a;
 	color: #fff;
 	text-shadow: 0 -1px 0 rgba(0,0,0,.25);
@@ -113,7 +118,7 @@ footer{
 .detalles-modelos{
 	font-family: 'Open Sans', sans-serif;
 	font-size: 1rem;
-	font-weight: bold;
+	/*font-weight: bold;*/
 	color: #5a5a5a;
 }
 
